trunk/Archive/2c8b4cfe98509b5bc0cc4f10900158d2-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function ‘int main()’:
main.cpp:9:5: error: ‘Sentence’ was not declared in this scope
     Sentence sentence = { "Hello", "from", "GCC", __VERSION__, "!" };    
     ^
main.cpp:9:14: error: expected ‘;’ before ‘sentence’
     Sentence sentence = { "Hello", "from", "GCC", __VERSION__, "!" };    
              ^
main.cpp:10:18: error: ‘sentence’ was not declared in this scope
     std::cout << sentence << std::endl;
                  ^
